--- a/index.html
+++ b/index.html
@@ -566,9 +566,8 @@
                     </div>
 
                     <h2>Jetzt bestellen!</h2>
-
-                    <form class="contact-form" action="https://formspree.io/f/mqkrvlaj" method="POST" enctype="multipart/form-data">
-                        <!-- Hidden input for cart data -->
+                    <form class="contact-form" action="https://formsubmit.co/laestheticcreations@gmail.com" method="POST" enctype="multipart/form-data">
+                    <!-- Hidden input for cart data -->
                         <input type="hidden" name="Bestellte Pakete" id="cart-data-input">
                         
                         <div class="form-row">
