--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Design Studios - Premium Light Redesign</title>
+    <title>aidesignstudios</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -186,7 +186,7 @@
         <section id="about" class="py-20 md:py-32">
             <div class="container mx-auto px-6 grid md:grid-cols-2 gap-12 md:gap-24 items-center">
                 <div class="animate-on-scroll">
-                     <img src="https://placehold.co/600x450/F3F4F6/111827?text=Professionelle+Grafik" alt="Eine professionelle, saubere Grafik" class="rounded-2xl shadow-xl w-full">
+                     <img src="mission.jpg" alt="Eine professionelle, saubere Grafik" class="rounded-2xl shadow-xl w-full">
                 </div>
                 <div class="animate-on-scroll">
                     <h2 class="text-4xl md:text-5xl font-bold tracking-tight bg-clip-text text-transparent bg-gradient-to-r from-orange-600 to-amber-500 pb-2">Unsere Mission.</h2>
@@ -747,6 +747,8 @@ Your response: flyer-single`;
     </script>
 </body>
 </html>
+
+
 
 
 
