--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aidesignstudios</title>
+    <link rel="icon" href="mein-icon.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -476,7 +477,7 @@
     <!-- Footer -->
     <footer class="py-16 bg-white">
         <div class="container mx-auto px-6 text-center text-gray-500">
-            <p>&copy; 2024 aidesignstudios. Alle Rechte vorbehalten.</p>
+            <p>&copy; 2025 aidesignstudios. Alle Rechte vorbehalten.</p>
         </div>
     </footer>
 
